# behavysis_viewer

./: README.md  conda_env.yaml  pyproject.toml
ba_viewer/: run.py
ba_viewer/models/: bout_inspect_list_model.py  bouts_list_model.py  keypoints_model.py  vid_model.py
ba_viewer/pydantic_models/: bouts.py  experiment_configs.py
ba_viewer/ui/: main_ui.py  main_ui.ui
ba_viewer/utils/: constants.py  cv2_qt_mixin.py  funcs.py
ba_viewer/widgets/: cv_view.py  graph_view.py
ba_viewer/windows/: help.py  main.py  settings.py  window_mixin.py
behavysis_viewer/: __main__.py  run.py
behavysis_viewer/models/: bout_inspect_list_model.py  bouts_list_model.py  exp_file_manager.py  keypoints_model.py  vid_model.py
behavysis_viewer/pydantic_models/: experiment_configs.py
behavysis_viewer/resources/: base_palette.xml
behavysis_viewer/ui/: main_ui.py  main_ui.ui  settings_ui.py  settings_ui.ui
behavysis_viewer/utils/: constants.py  cv2_qt_mixin.py
behavysis_viewer/widgets/: cv_view.py  graph_view.py
behavysis_viewer/windows/: help.py  main.py  settings.py  window_mixin.py
tests/: conftest.py  test_behav_df_utils.py  test_widgets_cv_view.py  test_widgets_graph_view.py
tests/resources/: 2_Round1.1_20220530_AGG-MOA_test3-M3_a2.feather  2_Round1.1_20220530_AGG-MOA_test3-M3_a2.json  abcd.feather.json  behavs_df.feather
