[tool.poetry]
name = "behavysis_viewer"
version = "0.1.23"
description = "A semi-automated behaviour verification, processing and analysis package."
authors = ["BowenLab"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://tlee08.github.io/behavysis_viewer"
repository = "https://github.com/tlee08/behavysis_viewer"
packages = [{ include = "behavysis_viewer" }]

[tool.poetry.dependencies]
python = "^3.12"
PySide6 = "^6.7.0"
pyqtgraph = "^0.13.7"
behavysis_core = "^0.1.3"

[tool.poetry.group.dev.dependencies]
behavysis_core = { path = "../behavysis_core", develop = true }
ruff = "^0.4.8"
mkdocs-material = "^9.5.18"
mkdocstrings-python = "^1.9.2"

[tool.poetry.scripts]
behavysis_viewer = 'behavysis_viewer.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
